--- a/GraduatioProject_Android/app/src/main/res/layout/activity_main.xml
+++ b/GraduatioProject_Android/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/bg_welcome">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="@drawable/bg_welcome2">
+        <View
+            android:layout_width="5dp"
+            android:layout_height="8dp">
+        </View>
+        <ImageView
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:background="@drawable/bg_welcome1">
+        </ImageView>
+    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:layout_width="300dp"
+        android:layout_height="20dp">
+    </View>
+
+    <LinearLayout
+        android:layout_width="240dp"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <TextView
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:text="安"
+            android:textSize="36dp"
+            android:gravity="center">
+        </TextView>
+        <TextView
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:text="全"
+            android:textSize="36dp"
+            android:gravity="center">
+        </TextView>
+        <TextView
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:text="卫"
+            android:textSize="36dp"
+            android:gravity="center">
+        </TextView>
+        <TextView
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:text="士"
+            android:textSize="36dp"
+            android:gravity="center">
+        </TextView>
+    </LinearLayout>
+
+    <View
+        android:layout_width="150dp"
+        android:layout_height="180dp">
+    </View>
+
+</LinearLayout>
