--- a/GraduatioProject_Android/app/src/main/res/drawable/bg_welcome.xml
+++ b/GraduatioProject_Android/app/src/main/res/drawable/bg_welcome.xml
@@ -3,15 +3,43 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:oneshot="false">
     <item
+        android:drawable="@drawable/frame"
+        android:duration="500"/>
+    <item
         android:drawable="@drawable/frame1"
-        android:duration="1000"/>
+        android:duration="50"/>
     <item
         android:drawable="@drawable/frame2"
-        android:duration="1000"/>
+        android:duration="50"/>
     <item
         android:drawable="@drawable/frame3"
-        android:duration="1000"/>
+        android:duration="800"/>
     <item
-        android:drawable="@drawable/frame4"
+        android:drawable="@drawable/frame2"
+        android:duration="50"/>
+    <item
+        android:drawable="@drawable/frame1"
+        android:duration="50"/>
+    <item
+        android:drawable="@drawable/frame"
+        android:duration="800"/>
+    <item
+        android:drawable="@drawable/frame5"
+        android:duration="50"/>
+    <item
+        android:drawable="@drawable/frame6"
+        android:duration="50"/>
+    <item
+        android:drawable="@drawable/frame7"
+        android:duration="800"/>
+    <item
+        android:drawable="@drawable/frame8"
+        android:duration="50"/>
+    <item
+        android:drawable="@drawable/frame9"
+        android:duration="50"/>
+    <item
+        android:drawable="@drawable/frame10"
         android:duration="1000"/>
+
 </animation-list>
