--- a/GraduatioProject_Android/app/src/main/res/drawable/menu_background.xml
+++ b/GraduatioProject_Android/app/src/main/res/drawable/menu_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true">
         <shape>
-            <solid android:color="#d7d7d7" />
+            <solid android:color="#e7e7e7" />
         </shape>
     </item>
     <item>
