--- a/GraduatioProject_Android/app/src/main/res/layout/fragment_record_environment.xml
+++ b/GraduatioProject_Android/app/src/main/res/layout/fragment_record_environment.xml
@@ -6,12 +6,12 @@
     android:orientation="vertical"
     tools:context=".tools.FragmentManager">
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/ChildViewpager"
+    <com.example.graduatioproject_android.tools.NoScrollViewpager
+        android:id="@+id/RecordViewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-    </androidx.viewpager.widget.ViewPager>
+    </com.example.graduatioproject_android.tools.NoScrollViewpager>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,6 +20,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/Temperature"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:drawablePadding="3dp"
@@ -35,6 +36,7 @@
         </View>
 
         <TextView
+            android:id="@+id/Humidity"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:drawablePadding="3dp"
@@ -50,6 +52,7 @@
         </View>
 
         <TextView
+            android:id="@+id/Smog"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:drawablePadding="3dp"
@@ -65,6 +68,7 @@
         </View>
 
         <TextView
+            android:id="@+id/Visible"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:drawablePadding="3dp"
