--- a/GraduatioProject_Android/app/src/main/res/layout/fragment_my.xml
+++ b/GraduatioProject_Android/app/src/main/res/layout/fragment_my.xml
@@ -4,14 +4,459 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#f8f8f8"
     tools:context=".tools.FragmentManager">
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/layout"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:gravity="center"
+        android:background="#3c3c3c"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"
+            android:text="用户设置"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:gravity="left|center"
+            >
+        </TextView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:orientation="horizontal"
+        android:background="@mipmap/bg_my"
+        >
+
+        <LinearLayout
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/headIV"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@mipmap/icon_head"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1.6"
+            android:orientation="vertical"
+            android:gravity="center|left">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="35dp">
+            </View>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:orientation="horizontal"
+                android:gravity="center|left">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="昵称："
+                    android:textSize="16dp">
+
+                </TextView>
+                <TextView
+                    android:id="@+id/nickname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Admin"
+                    android:textSize="12dp">
+                </TextView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:orientation="horizontal"
+                android:gravity="center|left">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="ID："
+                    android:textSize="16dp">
+
+                </TextView>
+                <TextView
+                    android:id="@+id/username"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="00000000"
+                    android:textSize="12dp">
+                </TextView>
+            </LinearLayout>
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="#d7d7d7"
+        />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="my"
-        android:textSize="100dp"
+        android:orientation="vertical"
         >
-    </TextView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:orientation="vertical"
+            android:gravity="center"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                >
+
+                <TextView
+                    android:id="@+id/ThemeTV"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@mipmap/icon_theme"
+                    />
+
+                <View
+                    android:layout_width="40dp"
+                    android:layout_height="1dp" />
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="80dp"
+                    android:background="#e4e4e4" />
+                <View
+                    android:layout_width="40dp"
+                    android:layout_height="1dp" />
+
+                <TextView
+                    android:id="@+id/voiceTV"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@mipmap/icon_voice"
+                    />
+
+                <View
+                    android:layout_width="40dp"
+                    android:layout_height="1dp" />
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="80dp"
+                    android:background="#e4e4e4" />
+                <View
+                    android:layout_width="40dp"
+                    android:layout_height="1dp" />
+
+                <TextView
+                    android:id="@+id/informTV"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@mipmap/icon_inform"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                >
+
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="20dp"
+                    android:text="主题"
+                    android:gravity="center"
+                    android:textSize="16dp"
+                    />
+
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="1dp" />
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="20dp"
+                    android:background="#e4e4e4" />
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="1dp" />
+
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="20dp"
+                    android:text="提示音"
+                    android:gravity="center"
+                    android:textSize="16dp"
+                    />
+
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="1dp" />
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="20dp"
+                    android:background="#e4e4e4" />
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="1dp" />
+
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="20dp"
+                    android:text="通知"
+                    android:gravity="center"
+                    android:textSize="16dp"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="360dp"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="6dp"
+                android:background="#e4e4e4" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:background="#f2f2f2" />
+
+
+            <Button
+                android:id="@+id/sectionBtn"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:gravity="center"
+                android:text="适宜环境区间"
+                android:textSize="20dp"
+                android:background="@drawable/bg_section"
+                />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:background="#f2f2f2" />
+
+            <LinearLayout
+                android:id="@+id/accountLL"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="10dp"
+                    android:layout_height="1dp" />
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:background="@mipmap/icon_sos" />
+
+                <TextView
+                    android:layout_width="90dp"
+                    android:layout_height="50dp"
+                    android:gravity="center"
+                    android:text="求助设置"
+                    android:textSize="16dp" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:background="@mipmap/icon_enter"
+                    android:gravity="center" />
+
+                <View
+                    android:layout_width="10dp"
+                    android:layout_height="1dp" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:background="#f2f2f2" />
+
+            <LinearLayout
+                android:id="@+id/sosLL"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="10dp"
+                    android:layout_height="1dp" />
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:background="@mipmap/icon_account" />
+
+                <TextView
+                    android:layout_width="90dp"
+                    android:layout_height="50dp"
+                    android:gravity="center"
+                    android:text="账号设置"
+                    android:textSize="16dp" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:background="@mipmap/icon_enter"
+                    android:gravity="center" />
+
+                <View
+                    android:layout_width="10dp"
+                    android:layout_height="1dp" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:background="#f2f2f2" />
+
+            <LinearLayout
+                android:id="@+id/helpLL"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="10dp"
+                    android:layout_height="1dp" />
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:background="@mipmap/icon_help" />
+
+                <TextView
+                    android:layout_width="60dp"
+                    android:layout_height="50dp"
+                    android:gravity="center"
+                    android:text="帮助"
+                    android:textSize="16dp" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:background="@mipmap/icon_enter"
+                    android:gravity="center" />
+
+                <View
+                    android:layout_width="10dp"
+                    android:layout_height="1dp" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:background="#f2f2f2" />
+
+            <LinearLayout
+                android:id="@+id/aboutLL"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="10dp"
+                    android:layout_height="1dp" />
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:background="@mipmap/icon_about" />
+
+                <TextView
+                    android:layout_width="60dp"
+                    android:layout_height="50dp"
+                    android:gravity="center"
+                    android:text="关于"
+                    android:textSize="16dp" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:background="@mipmap/icon_enter"
+                    android:gravity="center" />
+
+                <View
+                    android:layout_width="10dp"
+                    android:layout_height="1dp" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:background="#f2f2f2" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
+            <Button
+                android:id="@+id/exitBtn"
+                android:layout_width="350dp"
+                android:layout_height="50dp"
+                android:background="@drawable/style_button_exit"
+                android:text="退出登录"
+                android:textSize="18dp" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
