--- a/GraduatioProject_Android/app/src/main/res/layout/fragment_realtime_environment.xml
+++ b/GraduatioProject_Android/app/src/main/res/layout/fragment_realtime_environment.xml
@@ -24,7 +24,7 @@
         </TextView>
 
         <TextView
-            android:id="@+id/SmokeScope"
+            android:id="@+id/smoke_scope"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="#00000000"
@@ -43,6 +43,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="20dp" />
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -606,9 +608,9 @@
                     <View android:layout_width="10dp" android:layout_height="1dp"></View>
                     <View android:layout_width="6dp" android:layout_height="1dp" android:background="#000000"></View>
                     <View android:layout_width="10dp" android:layout_height="1dp"></View>
-                    <View android:layout_width="12dp" android:layout_height="1dp" android:background="#ce0000"></View>
-                    <View android:layout_width="10dp" android:layout_height="1dp"></View>
                     <View android:layout_width="6dp" android:layout_height="1dp" android:background="#000000"></View>
+                    <View android:layout_width="10dp" android:layout_height="1dp"></View>
+                    <View android:layout_width="12dp" android:layout_height="1dp" android:background="#ce0000"></View>
                     <View android:layout_width="10dp" android:layout_height="1dp"></View>
                     <View android:layout_width="6dp" android:layout_height="1dp" android:background="#000000"></View>
                     <View android:layout_width="10dp" android:layout_height="1dp"></View>
@@ -1064,6 +1066,8 @@
 
     </LinearLayout> <!--不要打开-->
 
+
+
     <View
         android:layout_width="380dp"
         android:layout_height="15dp"
@@ -1076,10 +1080,28 @@
         android:gravity="center">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="1dp"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/temperature_text"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="---- ℃"
+                android:textSize="34dp"
+                android:textStyle="bold">
+            </TextView>
+
+            <TextView
+                android:id="@+id/changeBtn"
+                android:layout_width="25dp"
+                android:layout_height="20dp"
+                android:background="@mipmap/icon_change">
+            </TextView>
 
         </LinearLayout>
 
@@ -1089,10 +1111,21 @@
             android:background="#e4e4e4"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="1dp"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/humidity_text"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="---- %"
+                android:textSize="34dp"
+                android:textStyle="bold">
+            </TextView>
 
         </LinearLayout>
 
