--- a/GraduatioProject_Android/app/src/main/res/layout/fragment_my.xml
+++ b/GraduatioProject_Android/app/src/main/res/layout/fragment_my.xml
@@ -98,7 +98,7 @@
 
                 </TextView>
                 <TextView
-                    android:id="@+id/username"
+                    android:id="@+id/numbername"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="00000000"
@@ -136,7 +136,7 @@
                 >
 
                 <TextView
-                    android:id="@+id/ThemeTV"
+                    android:id="@+id/themeTV"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:background="@mipmap/icon_theme"
@@ -449,7 +449,7 @@
                 android:layout_height="20dp" />
 
             <Button
-                android:id="@+id/exitBtn"
+                android:id="@+id/exitloginBtn"
                 android:layout_width="350dp"
                 android:layout_height="50dp"
                 android:background="@drawable/style_button_exit"
