--- a/GraduatioProject_Android/app/src/main/res/layout/activity_theme.xml
+++ b/GraduatioProject_Android/app/src/main/res/layout/activity_theme.xml
@@ -242,7 +242,10 @@
                 </View>
             </LinearLayout>
 
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="20dp">
+            </View>
         </LinearLayout>
 
     </ScrollView>
